--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Jinja2==3.1.6
 MarkupSafe==3.0.2
 pydantic==2.11.7
 pydantic_core==2.33.2
+python-magic==0.4.27
 sniffio==1.3.1
 starlette==0.46.2
 typing-inspection==0.4.1
