--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 annotated-types==0.7.0
 anyio==4.9.0
 bcrypt==4.3.0
+certifi==2026.1.4
 cffi==2.0.0
+charset-normalizer==3.4.4
 click==8.2.1
 colorama==0.4.6
 cryptography==46.0.3
@@ -15,8 +17,10 @@ pycparser==2.23
 pydantic==2.11.7
 pydantic_core==2.33.2
 python-magic==0.4.27
+requests==2.32.5
 sniffio==1.3.1
 starlette==0.46.2
 typing-inspection==0.4.1
 typing_extensions==4.14.0
+urllib3==2.6.3
 uvicorn==0.34.3
